cros-ide: add a setting to enable Gerrit comments
The new setting is used to guard whether Gerrit feature is enabled
(it is disabled by default).

We could have used the new setting inside gerrit.ts with
onDidChangeConfiguration to avoid the need for reload, but it is better
to have a kill switch in case of unforeseen problems.

BUG=b:216048068
TEST=manually enabled and disabled the feature

Change-Id: I85947195a7bd93cd60839876222525f5e1c9eef5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3977869
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -217,7 +217,7 @@
         "category": "CrOS",
         "title": "Collapse All Comments",
         "icon": "$(collapse-all)",
-        "enablement": "config.cros-ide.underDevelopment.gerrit"
+        "enablement": "config.cros-ide.gerrit.enabled"
       }
     ],
     "viewsContainers": {
@@ -442,6 +442,11 @@
           "description": "Disable the new logic to automatically detect a Portage package from the filepath, and use hardcoded mapping instead",
           "default": false
         },
+        "cros-ide.gerrit.enabled": {
+          "type": "boolean",
+          "markdownDescription": "Enable Gerrit comments.",
+          "default": false
+        },
         "cros-ide.platformEC.board": {
           "type": "string",
           "description": "EC target, for example, bloonchipper."
@@ -487,11 +492,6 @@
         "cros-ide.underDevelopment.deviceManagement": {
           "type": "boolean",
           "description": "Enable experimental Device Management features.",
-          "default": false
-        },
-        "cros-ide.underDevelopment.gerrit": {
-          "type": "boolean",
-          "description": "Enable Gerrit support (incomplete)",
           "default": false
         },
         "cros-ide.underDevelopment.platform2GtestDebugging": {
