cros-ide: Enable platform2 gtest runner by default
BUG=b:254145837
TEST=repo upload

Change-Id: I3d5ef9e1be7ad27dfef9f221e1dce79734a0386f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3989527
Tested-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Reviewed-by: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -496,8 +496,8 @@
         },
         "cros-ide.underDevelopment.platform2GtestDebugging": {
           "type": "boolean",
-          "description": "Enable platform2 gtest debugging support (under development)",
-          "default": false
+          "description": "Enable platform2 gtest debugging support",
+          "default": true
         },
         "cros-ide.underDevelopment.platformEC": {
           "type": "boolean",
