--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -674,6 +674,7 @@
   "devDependencies": {
     "@types/glob": "^7.1.4",
     "@types/jasmine": "^4.0.0",
+    "@types/mock-fs": "^4.13.1",
     "@types/node": "^14.17.6",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
@@ -697,6 +698,7 @@
     "gts": "^3.1.0",
     "jasmine": "^4.1.0",
     "js-green-licenses": "^3.0.1",
+    "mock-fs": "^5.2.0",
     "ovsx": "^0.5.1",
     "ssh2": "^1.10.0",
     "ts-loader": "^9.2.6",
