cros-ide: Enable Tast support by default
BUG=b:255632861
TEST=open a file in tast-tests, click a popup, and confirm tast dev
environment is setup.

Change-Id: Ia7032fd91f3bee22009c7979ec94adef478cafe7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4073876
Reviewed-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -585,7 +585,7 @@
         "cros-ide.underDevelopment.tast": {
           "type": "boolean",
           "description": "Enable Tast Support",
-          "default": false
+          "default": true
         },
         "cros-ide.underDevelopment.testCoverage": {
           "type": "boolean",
