cros-ide: recognize SELinux policy files (.te)
We recognize .te files and suggest an extension which provides
syntax highlighting.

BUG=b:216057633
TEST=https://screenshot.googleplex.com/9iBpmPr88njDkFb.png

Change-Id: I66b8b0a316c0dd3a8c7ed695daf9e64ead9c8b05
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4091490
Reviewed-by: Keigo Oka <oka@chromium.org>
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -55,6 +55,7 @@
     "onLanguage:gn",
     "onLanguage:go",
     "onLanguage:python",
+    "onLanguage:sepolicy",
     "onLanguage:shellscript",
     "onLanguage:typescript",
     "onLanguage:upstart"
@@ -664,6 +665,15 @@
         "filenames": [
           "Makefile.rules",
           "Makefile.toolchain"
+        ]
+      },
+      {
+        "id": "sepolicy",
+        "aliases": [
+          "SELinux policy"
+        ],
+        "extensions": [
+          ".te"
         ]
       }
     ],
