cros-ide: recognize Starlark (Bazel) files
We also suggest an extension providing syntax highlighting.

BUG=b:216057633
TEST=https://screenshot.googleplex.com/AdzT36qYahLfZFY.png (there is an
error message coming from the extension)

Change-Id: I9db2d9e95c6b6298be73676ba253770ab48bdfe7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4091491
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -57,6 +57,7 @@
     "onLanguage:python",
     "onLanguage:sepolicy",
     "onLanguage:shellscript",
+    "onLanguage:starlark",
     "onLanguage:typescript",
     "onLanguage:upstart"
   ],
@@ -674,6 +675,21 @@
         ],
         "extensions": [
           ".te"
+        ]
+      },
+      {
+        "id": "starlark",
+        "aliases": [
+          "Starlark"
+        ],
+        "extensions": [
+          ".bzl",
+          ".star"
+        ],
+        "filenames": [
+          "BUILD",
+          "BUILD.bazel",
+          "WORKSPACE"
         ]
       }
     ],
