cros-ide: recognize org.chromium.*.conf files as XML
This change brings two benefits:
  - Correct syntax highlighting for the users. Right now .conf files are
    considered "Properties".
  - More accurate programming language statistics in our metrics.

Note, that some platform2 .conf files are still not recognized correctly,
so further changes will be needed.

BUG=b:216057633
TEST=before: https://screenshot.googleplex.com/B7iRnULmbifF4rG.png,
after: https://screenshot.googleplex.com/6svtfxWQ37fEACY.png

Change-Id: I32bc770d1c9d16404652da72472f8f66f581516f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4096099
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -691,6 +691,12 @@
           "BUILD.bazel",
           "WORKSPACE"
         ]
+      },
+      {
+        "id": "xml",
+        "filenamePatterns": [
+          "org.chromium.*.conf"
+        ]
       }
     ],
     "grammars": [
