cros-ide: Improve the Gerrit comment UI
Screenshot: https://screenshot.googleplex.com/5nEsmK6RjyWzczK
(Showing the patchset number and action buttons on the comment threads
and the focused comment)

BUG=b:256064422,b:263062647
TEST=npm t

Change-Id: I64269e35f9dfd41f7ac74acdc42b2d26a0d70834
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4112870
Tested-by: Yusuke Matsushita <ymat@google.com>
Reviewed-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Yusuke Matsushita <ymat@google.com>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -248,6 +248,34 @@
         "enablement": "config.cros-ide.gerrit.enabled"
       },
       {
+        "command": "cros-ide.gerrit.browseCommentThread",
+        "category": "CrOS",
+        "title": "Open in Gerrit",
+        "icon": "$(link)",
+        "enablement": "config.cros-ide.gerrit.enabled"
+      },
+      {
+        "command": "cros-ide.gerrit.browseCommentThreadAuthor",
+        "category": "CrOS",
+        "title": "Open Author's Dashboard in Gerrit",
+        "icon": "$(account)",
+        "enablement": "config.cros-ide.gerrit.enabled"
+      },
+      {
+        "command": "cros-ide.gerrit.browseComment",
+        "category": "CrOS",
+        "title": "Open in Gerrit",
+        "icon": "$(link)",
+        "enablement": "config.cros-ide.gerrit.enabled"
+      },
+      {
+        "command": "cros-ide.gerrit.browseCommentAuthor",
+        "category": "CrOS",
+        "title": "Open Author's Dashboard in Gerrit",
+        "icon": "$(account)",
+        "enablement": "config.cros-ide.gerrit.enabled"
+      },
+      {
         "command": "cros-ide.showHelpForBoardsPackages",
         "title": "Show Help",
         "icon": "$(question)"
@@ -301,7 +329,26 @@
     "menus": {
       "comments/commentThread/title": [
         {
-          "command": "cros-ide.gerrit.collapseAllCommentThreads"
+          "command": "cros-ide.gerrit.browseCommentThread",
+          "group": "inline@1"
+        },
+        {
+          "command": "cros-ide.gerrit.browseCommentThreadAuthor",
+          "group": "inline@2"
+        },
+        {
+          "command": "cros-ide.gerrit.collapseAllCommentThreads",
+          "group": "inline@3"
+        }
+      ],
+      "comments/comment/title": [
+        {
+          "command": "cros-ide.gerrit.browseComment",
+          "group": "inline@1"
+        },
+        {
+          "command": "cros-ide.gerrit.browseCommentAuthor",
+          "group": "inline@2"
         }
       ],
       "editor/context": [
