cros-ide: Update the 'Collapse All Comment Threads' command
Rename it from 'comments' to 'comment threads'
and also get rid of workbench.action.collapseAllComments
Screenshot: https://screenshot.googleplex.com/3UESnCnUmx3oVgc
(showing the updated name)

BUG=b:216048068
TEST=npm t

Change-Id: Ibe3848b33296c6c64e4c262e6754674d1f15eace
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4113811
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Yusuke Matsushita <ymat@google.com>
Tested-by: Yusuke Matsushita <ymat@google.com>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -229,9 +229,9 @@
         "enablement": "config.cros-ide.underDevelopment.gerrit"
       },
       {
-        "command": "cros-ide.gerrit.collapseAllComments",
+        "command": "cros-ide.gerrit.collapseAllCommentThreads",
         "category": "CrOS",
-        "title": "Collapse All Comments",
+        "title": "Collapse All Comment Threads",
         "icon": "$(collapse-all)",
         "enablement": "config.cros-ide.gerrit.enabled"
       },
@@ -289,7 +289,7 @@
     "menus": {
       "comments/commentThread/title": [
         {
-          "command": "cros-ide.gerrit.collapseAllComments"
+          "command": "cros-ide.gerrit.collapseAllCommentThreads"
         }
       ],
       "editor/context": [
