ide: Add support for component links in DIR_METADATA files
I've enabled this feature by default, since even if it is broken, the
impact would be fairly minimal.

BUG=b:274425320
FIXED=b:274425320
TEST=Clicked a few component and component_id links in DIR_METADATA
TEST=files.

Change-Id: Ie4297ce97c4333be2573020cae3cb811442978c1
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4342192
Reviewed-by: Keigo Oka <oka@chromium.org>
Tested-by: Christian Flach <cmfcmf@chromium.org>
Commit-Queue: Christian Flach <cmfcmf@chromium.org>

--- a/chromiumide/package.json
+++ b/chromiumide/package.json
@@ -871,6 +871,11 @@
           "description": "Format files with 'cros format'",
           "default": true
         },
+        "chromiumide.dirMetadata.links": {
+          "type": "boolean",
+          "description": "Make references to components in DIR_METADATA files clickable.",
+          "default": true
+        },
         "chromiumide.ebuildSupport.enabled": {
           "type": "boolean",
           "description": "Enable features for ChromeOS EBuilds",
