cros-ide: Ensure buttons for Gerrit shown only for Gerrit comments
BUG=b:270101085
TEST=npm run unit-test
TEST=manually confirm buttons for Gerrit comments are still shown.

Change-Id: I08f3081fe043f375fd51731d64926e9da4c5b8e8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4402181
Commit-Queue: Keigo Oka <oka@chromium.org>
Reviewed-by: Eric Lok <lokeric@google.com>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -396,17 +396,18 @@
       "comments/commentThread/context": [
         {
           "command": "cros-ide.gerrit.reply",
-          "group": "inline@a"
+          "group": "inline@a",
+          "when": "commentController == cros-ide-gerrit"
         },
         {
           "command": "cros-ide.gerrit.replyAndResolve",
           "group": "inline@b",
-          "when": "commentThread =~ /<unresolved>/"
+          "when": "commentController == cros-ide-gerrit && commentThread =~ /<unresolved>/"
         },
         {
           "command": "cros-ide.gerrit.replyAndUnresolve",
           "group": "inline@b",
-          "when": "commentThread =~ /<resolved>/"
+          "when": "commentController == cros-ide-gerrit && commentThread =~ /<resolved>/"
         }
       ],
       "comments/comment/title": [
