cros-ide: Default-enable clickable links in OWNERS files
BUG=b:274425113
TEST=Enable the cros-ide.ownersFiles.links setting

Change-Id: I8cc21452ff84d3b7956daa6ba82c5420a88fdca9
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4439629
Auto-Submit: Christian Flach <cmfcmf@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>
Tested-by: Christian Flach <cmfcmf@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Commit-Queue: Christian Flach <cmfcmf@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -698,6 +698,11 @@
           "markdownDescription": "Enable Gerrit comments.",
           "default": true
         },
+        "cros-ide.ownersFiles.links": {
+          "type": "boolean",
+          "description": "Make references to other OWNERS files clickable.",
+          "default": true
+        },
         "cros-ide.platformEC.board": {
           "type": "string",
           "description": "EC target, for example, bloonchipper."
@@ -763,11 +768,6 @@
         "cros-ide.underDevelopment.gerrit": {
           "type": "boolean",
           "description": "Enable new features for Gerrit (under development)",
-          "default": false
-        },
-        "cros-ide.underDevelopment.ownersFileLinks": {
-          "type": "boolean",
-          "description": "Enable experimental support for clickable links in OWNERS files.",
           "default": false
         },
         "cros-ide.underDevelopment.platform2GtestDebugging": {
