cros-ide: Default-enable Chromium output directories view
BUG=b:274425317
TEST=Enable the cros-ide.chrome.outputDirectories setting.

Change-Id: I7c55c3d8c723c6cc0b714fbe55018530726c385b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4439630
Reviewed-by: Keigo Oka <oka@chromium.org>
Auto-Submit: Christian Flach <cmfcmf@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Tested-by: Christian Flach <cmfcmf@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -373,7 +373,7 @@
         {
           "id": "cros-ide.chromium.outputDirectories",
           "name": "Chromium: Output Directories",
-          "when": "config.cros-ide.underDevelopment.chromiumOutputDirectories"
+          "when": "config.cros-ide.chrome.outputDirectories"
         }
       ]
     },
@@ -683,6 +683,11 @@
           "description": "Name to use for SSH to DUT for deploy chrome",
           "default": "DUT"
         },
+        "cros-ide.chrome.outputDirectories": {
+          "type": "boolean",
+          "description": "Enable view for Chromium output directories in the Explorer sidebar",
+          "default": true
+        },
         "cros-ide.codeSearch": {
           "type": "string",
           "enum": [
@@ -748,11 +753,6 @@
         "cros-ide.underDevelopment.chromiumBuild": {
           "type": "boolean",
           "description": "Enable build + deploy for chromium code (incomplete)",
-          "default": false
-        },
-        "cros-ide.underDevelopment.chromiumOutputDirectories": {
-          "type": "boolean",
-          "description": "Enable output directory view for Chromium code (under development)",
           "default": false
         },
         "cros-ide.underDevelopment.crosFormat": {
