cros-ide: Remove redundant activation events
Remove activation events that are inferred from contribution points.
https://code.visualstudio.com/updates/v1_74#_implicit-activation-events-for-declared-extension-contributions

BUG=b:284404807
TEST=Manually confirm that opening a C file activates the extension.

Change-Id: I82facc472852ab377332f5cacab57b080cc03a99
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4569949
Tested-by: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -23,47 +23,11 @@
   "activationEvents": [
     "onCommand:cros-ide.chrome.Build",
     "onCommand:cros-ide.chrome.iBuild",
-    "onCommand:cros-ide.deviceManagement.addDevice",
-    "onCommand:cros-ide.deviceManagement.addExistingHosts",
-    "onCommand:cros-ide.deviceManagement.deleteDevice",
-    "onCommand:cros-ide.deviceManagement.connectToDeviceForScreen",
-    "onCommand:cros-ide.deviceManagement.connectToDeviceForShell",
-    "onCommand:cros-ide.deviceManagement.openSystemLogViewer",
-    "onCommand:cros-ide.deviceManagement.flashPrebuiltImage",
-    "onCommand:cros-ide.deviceManagement.crosfleetLogin",
-    "onCommand:cros-ide.deviceManagement.refreshLeases",
-    "onCommand:cros-ide.deviceManagement.addLease",
-    "onCommand:cros-ide.deviceManagement.abandonLease",
-    "onCommand:cros-ide.deviceManagement.copyHostname",
-    "onCommand:cros-ide.deviceManagement.runTastTests",
-    "onCommand:cros-ide.refreshBoardsPackages",
-    "onCommand:cros-ide.gerrit.refreshComments",
-    "onCommand:cros-ide.codeSearchOpenCurrentFile",
-    "onCommand:cros-ide.codeSearchCopyCurrentFile",
-    "onCommand:cros-ide.codeSearchSearchForSelection",
-    "onCommand:cros-ide.crosWorkonStart",
-    "onCommand:cros-ide.crosWorkonStop",
-    "onCommand:cros-ide.selectBoard",
-    "onCommand:cros-ide.setDefaultBoard",
-    "onCommand:cros-ide.fileIdeBug",
-    "onCommand:cros-ide.resetUserID",
-    "onCommand:cros-ide.openEbuild",
     "onCommand:workbench.action.tasks.runTask",
-    "onView:devices",
-    "onView:boards-packages",
-    "onView:cros-ide-status",
-    "onView:cros-ide.chromium.outputDirectories",
-    "onLanguage:c",
     "onLanguage:cpp",
-    "onLanguage:gn",
     "onLanguage:go",
-    "onLanguage:portage",
     "onLanguage:python",
-    "onLanguage:sepolicy",
-    "onLanguage:shellscript",
-    "onLanguage:starlark",
-    "onLanguage:typescript",
-    "onLanguage:upstart"
+    "onLanguage:typescript"
   ],
   "main": "./dist/extension.js",
   "contributes": {
