cros-ide: Migrate cros-ide.board to chromiumide.board
As a starter to migrate all the cros-ide.* properties to chromiumide.*,
migrate cros-ide.board.

BUG=b:284404807
TEST=npm t
TEST=set cros-ide.board to be brya on the extension without this change,
execute the extension with this change, and confirm the setting is
migrated to chromiumide.board.

Change-Id: Ic254b4d7f9b2448a863db41fddb94a87e4975623
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4607906
Tested-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -621,7 +621,7 @@
     "configuration": {
       "title": "ChromiumIDE",
       "properties": {
-        "cros-ide.board": {
+        "chromiumide.board": {
           "type": "string",
           "description": "The board to use for generating C++ cross references and autocompletion"
         },
