cros-ide: Migrate configs for device management
BUG=b:284404807
TEST=npm t

Change-Id: I97f0d4ff1ce5592ba438a2a851f35e570c5927ce
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4604145
Commit-Queue: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -772,7 +772,7 @@
           "description": "Send metrics to GA4 instead of UA",
           "default": false
         },
-        "cros-ide.deviceManagement.devices": {
+        "chromiumide.deviceManagement.devices": {
           "type": "array",
           "scope": "machine-overridable",
           "description": "List of developer-owned device hostnames",
