cros-ide: Update command names for codesearch
BUG=b:284404807
TEST=npm t

Change-Id: I9c734572f91caf85f6748c9a5275e1ad6946eabb
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4615393
Auto-Submit: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -128,17 +128,17 @@
         "enablement": "cros-ide.chrootPath"
       },
       {
-        "command": "cros-ide.codeSearchOpenCurrentFile",
+        "command": "chromiumide.codeSearchOpenCurrentFile",
         "category": "CrOS",
         "title": "Open in Code Search"
       },
       {
-        "command": "cros-ide.codeSearchCopyCurrentFile",
+        "command": "chromiumide.codeSearchCopyCurrentFile",
         "category": "CrOS",
         "title": "Copy Code Search URL to clipboard"
       },
       {
-        "command": "cros-ide.codeSearchSearchForSelection",
+        "command": "chromiumide.codeSearchSearchForSelection",
         "category": "CrOS",
         "title": "Search for selection in Code Search"
       },
@@ -389,13 +389,13 @@
       ],
       "editor/context": [
         {
-          "command": "cros-ide.codeSearchOpenCurrentFile"
+          "command": "chromiumide.codeSearchOpenCurrentFile"
         },
         {
-          "command": "cros-ide.codeSearchCopyCurrentFile"
+          "command": "chromiumide.codeSearchCopyCurrentFile"
         },
         {
-          "command": "cros-ide.codeSearchSearchForSelection"
+          "command": "chromiumide.codeSearchSearchForSelection"
         }
       ],
       "editor/title": [
