cros-ide: Update command names for chrome
BUG=b:284404807
TEST=npm t

Change-Id: I78f4ca95dc3cd71c651f6f9c6c7f1d3a072de305
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/4615390
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Auto-Submit: Keigo Oka <oka@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -31,14 +31,14 @@
   "contributes": {
     "commands": [
       {
-        "command": "cros-ide.chrome.build",
+        "command": "chromiumide.chrome.build",
         "category": "CrOS",
         "title": "Build + Deploy Ash + Lacros to DUT",
         "icon": "$(window)",
         "enablement": "config.chromiumide.underDevelopment.chromiumBuild"
       },
       {
-        "command": "cros-ide.chrome.watchBuild",
+        "command": "chromiumide.chrome.watchBuild",
         "category": "CrOS",
         "title": "Build + Deploy Ash + Lacros to DUT, restarts build on save of any file",
         "icon": "$(window)",
